syntax = "proto3";

package greeter.v1;

option go_package = "greeterpb/";

service Greeter {
  rpc SayHelloStream(HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
  int32 count = 2;
}

message HelloResponse {
  string message = 1;
  int32 seq = 2;
}
